--- a/frontend/src/locales/fi.json
+++ b/frontend/src/locales/fi.json
@@ -1,6 +1,11 @@
 {
     "firefly": {
-        "welcome_back": "Mit\u00e4 kuuluu?"
+        "welcome_back": "Mit\u00e4 kuuluu?",
+        "dashboard": "Etusivu",
+        "automation": "Automaatio",
+        "accounting": "Kirjanpito",
+        "financial_control": "Talouden hallinta",
+        "others": "Muut"
     },
     "config": {
         "html_language": "fi"
