--- a/frontend/src/locales/el.json
+++ b/frontend/src/locales/el.json
@@ -1,6 +1,11 @@
 {
     "firefly": {
-        "welcome_back": "\u03a4\u03b9 \u03c0\u03b1\u03af\u03b6\u03b5\u03b9;"
+        "welcome_back": "\u03a4\u03b9 \u03c0\u03b1\u03af\u03b6\u03b5\u03b9;",
+        "dashboard": "\u0395\u03c0\u03b9\u03c3\u03ba\u03cc\u03c0\u03b7\u03c3\u03b7",
+        "automation": "\u0391\u03c5\u03c4\u03bf\u03bc\u03b1\u03c4\u03bf\u03c0\u03bf\u03af\u03b7\u03c3\u03b7",
+        "accounting": "\u039b\u039f\u0393\u0399\u03a3\u03a4\u0399\u039a\u0397",
+        "financial_control": "\u039f\u03b9\u03ba\u03bf\u03bd\u03bf\u03bc\u03b9\u03ba\u03cc\u03c2 \u03ad\u03bb\u03b5\u03b3\u03c7\u03bf\u03c2",
+        "others": "\u039b\u039f\u0399\u03a0\u0391"
     },
     "config": {
         "html_language": "el"
