--- a/frontend/src/locales/pl.json
+++ b/frontend/src/locales/pl.json
@@ -1,6 +1,11 @@
 {
     "firefly": {
-        "welcome_back": "Co jest grane?"
+        "welcome_back": "Co jest grane?",
+        "dashboard": "Kokpit",
+        "automation": "Automatyzacja",
+        "accounting": "Ksi\u0119gowo\u015b\u0107",
+        "financial_control": "Kontrola finansowa",
+        "others": "Pozosta\u0142e"
     },
     "config": {
         "html_language": "pl"
