--- a/frontend/src/locales/vi.json
+++ b/frontend/src/locales/vi.json
@@ -1,6 +1,11 @@
 {
     "firefly": {
-        "welcome_back": "Ch\u00e0o m\u1eebng tr\u1edf l\u1ea1i"
+        "welcome_back": "Ch\u00e0o m\u1eebng tr\u1edf l\u1ea1i",
+        "dashboard": "B\u1ea3ng \u0111i\u1ec1u khi\u1ec3n",
+        "automation": "Automation",
+        "accounting": "Accounting",
+        "financial_control": "Financial control",
+        "others": "Others"
     },
     "config": {
         "html_language": "vi"
