--- a/frontend/src/locales/zh-tw.json
+++ b/frontend/src/locales/zh-tw.json
@@ -1,6 +1,11 @@
 {
     "firefly": {
-        "welcome_back": "What's playing?"
+        "welcome_back": "What's playing?",
+        "dashboard": "\u76e3\u63a7\u9762\u677f",
+        "automation": "Automation",
+        "accounting": "Accounting",
+        "financial_control": "Financial control",
+        "others": "Others"
     },
     "config": {
         "html_language": "zh-tw"
